--- a/src/components/CardNota/CardNota.css
+++ b/src/components/CardNota/CardNota.css
@@ -1,33 +1,32 @@
 .card-nota {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	justify-content: space-between;
-	flex-wrap: wrap;
-	padding: 16px;
-	border-radius: 4px;
-	box-shadow: 0px 1px 4px #666;
-	margin: 1rem;
-	min-width: 200px;
-	background-color: rgb(228, 228, 228);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    background-color: var(--fundo-detalhes);
+    border-radius: 4px;
+    flex-wrap: wrap;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+    padding: 16px;
 }
 
-.card-nota-cabecalho {
-	display: flex;
-	justify-content: space-between;
-	width: 100%;
-	align-items: center;
+.card-nota_cabecalho {
+    font-size: 1.1em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.card-nota-texto {
-	margin-top: 8px;
-	font-size: 1em;
+.card-nota_texto {
+    margin-top: 8px;
+    font-size: 1em;
 }
 
-.card-nota-titulo {
-	font-size: 1.3em;
+.card-nota_titulo {
+    font-size: 1.2em;
+    margin-right: 12px;
 }
 
-.card-nota-categoria {
+/* .card-nota-categoria {
 	margin-top: 10px;
-}
+} */
