--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -8,4 +8,6 @@
   --secundaria-ativa: #cccccc;
   --fundo: #ffffff;
   --fundo-detalhes: #ececec;
+  --notas: #f4fcaa;
+  --fundo-lista: #bfbdcc;
 }
