--- a/src/components/Listadenotas/estilo.css
+++ b/src/components/Listadenotas/estilo.css
@@ -1,16 +1,16 @@
 .lista-notas {
-    background-color: var(--fundo);
+    background-color: var(--fundo-lista);
     flex-grow: 3;
     display: grid;
     grid-template-columns: auto auto auto auto auto;
-    list-style: none;
+    list-style-type: none;
     padding-left: 24px;
     padding-top: 24px;
-}
-
-.lista-notas_item {
+  }
+  .lista-notas_item {
     margin: 12px;
     max-width: 240px;
-    max-height: 400px;
+    max-height: 300px;
     display: inline;
-}
+    line-height: 1.4rem;
+  }
